--- a/agent2d-3.1.1/src/Makefile
+++ b/agent2d-3.1.1/src/Makefile
@@ -163,18 +163,18 @@ HEADERS = $(noinst_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/li/Robocup/agent2d-3.1.1/config/missing --run aclocal-1.11
-AMTAR = ${SHELL} /home/li/Robocup/agent2d-3.1.1/config/missing --run tar
-AUTOCONF = ${SHELL} /home/li/Robocup/agent2d-3.1.1/config/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/li/Robocup/agent2d-3.1.1/config/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/li/Robocup/agent2d-3.1.1/config/missing --run automake-1.11
+ACLOCAL = ${SHELL} /home/li/桌面/Robocup2D_resp/agent2d-3.1.1/config/missing --run aclocal-1.11
+AMTAR = ${SHELL} /home/li/桌面/Robocup2D_resp/agent2d-3.1.1/config/missing --run tar
+AUTOCONF = ${SHELL} /home/li/桌面/Robocup2D_resp/agent2d-3.1.1/config/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/li/桌面/Robocup2D_resp/agent2d-3.1.1/config/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/li/桌面/Robocup2D_resp/agent2d-3.1.1/config/missing --run automake-1.11
 AWK = gawk
 BOOST_CPPFLAGS = -I/usr/include
 BOOST_LDFLAGS = -L/usr/lib64
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
-CPPFLAGS =  -I/usr/include -I/path/to/prefix/include
+CPPFLAGS =  -I/usr/include
 CXX = g++
 CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
@@ -193,13 +193,13 @@ INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
-LDFLAGS =  -L/usr/lib64 -L/path/to/prefix/lib
+LDFLAGS =  -L/usr/lib64
 LIBOBJS = 
-LIBRCSCLIB = /path/to/prefix/lib
+LIBRCSCLIB = /usr/local/lib
 LIBS = -lrcsc_agent -lrcsc_ann -lrcsc_net -lrcsc_time -lrcsc_param -lrcsc_gz -lrcsc_rcg -lrcsc_geom -lz -lm 
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/li/Robocup/agent2d-3.1.1/config/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/li/桌面/Robocup2D_resp/agent2d-3.1.1/config/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = agent2d
@@ -215,10 +215,10 @@ SET_MAKE =
 SHELL = /bin/bash
 STRIP = 
 VERSION = 3.1.1
-abs_builddir = /home/li/Robocup/agent2d-3.1.1/src
-abs_srcdir = /home/li/Robocup/agent2d-3.1.1/src
-abs_top_builddir = /home/li/Robocup/agent2d-3.1.1
-abs_top_srcdir = /home/li/Robocup/agent2d-3.1.1
+abs_builddir = /home/li/桌面/Robocup2D_resp/agent2d-3.1.1/src
+abs_srcdir = /home/li/桌面/Robocup2D_resp/agent2d-3.1.1/src
+abs_top_builddir = /home/li/桌面/Robocup2D_resp/agent2d-3.1.1
+abs_top_srcdir = /home/li/桌面/Robocup2D_resp/agent2d-3.1.1
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -238,7 +238,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/li/Robocup/agent2d-3.1.1/config/install-sh
+install_sh = ${SHELL} /home/li/桌面/Robocup2D_resp/agent2d-3.1.1/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
